fix: make the nav sticky to the top of the screen and make sure it's z-index is above everything else for a better user experience

--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -6,17 +6,20 @@
 }
 
 .nav-shopping {
+  background-color: white;
   gap: 0.8rem;
   /* padding: 1.1rem 16.3rem; */
   padding: 1.1rem 0rem;
   width: 100%;
   position: sticky;
+  top: 0;
   box-shadow: rgba(0, 0, 0, 0.04) 0px -1px 2px, rgba(0, 0, 0, 0.04) 0px 1px 2px,
     rgba(0, 0, 0, 0.04) 0px 3px 4px;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 1rem;
+  z-index: 999;
 }
 
 .nav-shopping a {
